# Advent-of-Code-2022

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt
day01/: solution.py
day02/: solution.py
day03/: solution.py
day04/: solution.py
day05/: solution.py
day06/: solution.py
day07/: solution.py
day08/: solution.py
day09/: solution.py
day10/: solution.py
day11/: solution.py
day12/: solution.py
day13/: solution.py
day14/: solution.py
day15/: solution.py
day16/: solution.py
day18/: solution.py
day20/: solution.py
day23/: solution.py
day25/: solution.py
